[gd_scene load_steps=8 format=3 uid="uid://bgvr3t4hmbkny"]

[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="1_w0q73"]
[ext_resource type="Script" path="res://sources/gui/Dialogue.gd" id="1_xbnx6"]
[ext_resource type="PackedScene" uid="uid://3ldimch2l6rv" path="res://presets/gui/Scrollable.tscn" id="2_415ce"]
[ext_resource type="Texture2D" uid="uid://bxbrk4eng2uhi" path="res://data/graphics/gui/menu/menubar_button.png" id="3_5rxxj"]
[ext_resource type="Texture2D" uid="uid://b2t8xg8go0vsr" path="res://data/graphics/gui/menu/menubar_button_pressed.png" id="4_fspi0"]
[ext_resource type="PackedScene" uid="uid://tqcjqyaicaol" path="res://presets/gui/contexts/ContextMenuV.tscn" id="5_6rp1f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5qyvn"]

[node name="Dialogue" type="VBoxContainer"]
custom_minimum_size = Vector2(676, 280)
offset_right = 676.0
offset_bottom = 364.0
mouse_filter = 2
theme = ExtResource("1_w0q73")
script = ExtResource("1_xbnx6")

[node name="Buffer" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="BottomVbox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Dialogue" type="PanelContainer" parent="BottomVbox"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_type_variation = &"DialogueBox"

[node name="FixedHBox" type="HBoxContainer" parent="BottomVbox/Dialogue"]
layout_mode = 2
mouse_filter = 0

[node name="Scrollable" parent="BottomVbox/Dialogue/FixedHBox" instance=ExtResource("2_415ce")]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5qyvn")

[node name="Buffer" type="Control" parent="BottomVbox/Dialogue/FixedHBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Button" type="Control" parent="BottomVbox/Dialogue"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="TouchButton" type="TouchScreenButton" parent="BottomVbox/Dialogue/Button"]
position = Vector2(32, 0)
texture_normal = ExtResource("3_5rxxj")
texture_pressed = ExtResource("4_fspi0")

[node name="Label" type="Label" parent="BottomVbox/Dialogue/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -7.5
offset_right = 52.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoiceVbox" type="VBoxContainer" parent="BottomVbox"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="BufferUp" type="Control" parent="BottomVbox/ChoiceVbox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Choice" parent="BottomVbox/ChoiceVbox" instance=ExtResource("5_6rp1f")]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme_type_variation = &"DialogueBox"
fadeInDelay = 0.5
displayDelay = 0.0
fadeOutDelay = 0.3

[node name="BufferDown" type="Control" parent="BottomVbox/ChoiceVbox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[connection signal="released" from="BottomVbox/Dialogue/Button/TouchButton" to="." method="ButtonPressed"]
